Atualização de arquivos

--- a/cadastro.html
+++ b/cadastro.html
@@ -43,14 +43,57 @@
 					<input id="input-nome" class="form-item required no-validate" type="text" name="nome">
 					<label id="label-nome" for="input-nome" class="label">Nome</label>
 
-					<span class="span-error-description"></span>
+					<span class="error-description"></span>
 				</div><!--div.div-item-->
 
 				<div class="div-item">
 					<input id="input-email" class="form-item email required no-validate" type="email" name="email">
 					<label id="label-email" for="input-email" class="label">E-mail</label>
 
-					<span class="span-error-description"></span>
+					<span class="error-description"></span>
+				</div><!--div.div-item-->
+
+				<div class="div-item">
+					<input id="input-cep" class="form-item cep required no-validate" type="text" name="cep">
+					<label id="label-cep" for="input-cep" class="label">CEP</label>
+
+					<span class="error-description"></span>
+				</div><!--div.div-item-->
+
+				<div class="div-item">
+					<input id="input-date" class="form-item date required no-validate" type="text" name="date">
+					<label id="label-date" for="input-date" class="label">Data</label>
+
+					<span class="error-description"></span>
+				</div><!--div.div-item-->
+
+				<div class="div-item">
+					<input id="input-password" class="form-item password required no-validate" type="password" name="password">
+					<label id="label-password" for="input-password" class="label">Senha</label>
+
+					<span class="error-description"></span>
+					<span class="show-password"></span>
+				</div><!--div.div-item-->
+
+				<div class="div-item">
+					<input id="input-cpf" class="form-item cpf required no-validate" type="text" name="cpf">
+					<label id="label-cpf" for="input-cpf" class="label">CPF</label>
+
+					<span class="error-description"></span>
+				</div><!--div.div-item-->
+
+				<div class="div-item">
+					<input id="input-tel-cel" class="form-item tel tel-cel required no-validate" type="text" name="telefone-celular">
+					<label id="label-tel-cel" for="input-tel-cel" class="label">Telefone celular</label>
+
+					<span class="error-description"></span>
+				</div><!--div.div-item-->
+
+				<div class="div-item">
+					<input id="input-tel-fixo" class="form-item tel tel-fixo required no-validate" type="text" name="telefone-fixo">
+					<label id="label-tel-fixo" for="input-tel-fixo" class="label">Telefone fixo</label>
+
+					<span class="error-description"></span>
 				</div><!--div.div-item-->
 
 				<div class="div-item div-item-submit">
