Atualização de arquivos

--- a/cadastro.html
+++ b/cadastro.html
@@ -119,6 +119,6 @@
 					<input class="input-submit button button-blue" type="submit" value="Cadastrar">
 				</div><!--div.div-item-->
 			</form>
-		</div><!--div.form-container-normal-->
+		</div><!--div.form-container-->
 	</body>
 </html>
