--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 		<script src="sources/functions_js/masks.js"></script>
 
         <!-- TÍTULO DA PÁGINA -->
-		<title>Formulário  de Cadastro</title>
+		<title>Formulário  de Login</title>
 	</head>
 
 	<body>
