Atualização de arquivos

--- a/cadastro.html
+++ b/cadastro.html
@@ -97,6 +97,13 @@
 				</div><!--div.div-item-->
 
 				<div class="div-item">
+					<input id="input-tel" class="form-item tel required no-validate" type="text" name="telefone">
+					<label id="label-tel" for="input-tel">Telefone</label>
+
+					<span class="error-description"></span>
+				</div><!--div.div-item-->
+
+				<div class="div-item">
 					<select id="select" class="form-item form-item-select required no-validate" name="select">
 						<option value=""></option>
 						<option value="1">Opção 1</option>
