Atualização de versão

--- a/login.html
+++ b/login.html
@@ -37,26 +37,26 @@
 	</head>
 
 	<body>
-		<div class="form-container form-container-login clearFix">
-			<form class="clearFix" method="post" action="" autocomplete="off">
-				<div class="div-item div-item-usuario">
-					<input id="input-usuario" class="form-item required no-validate user" type="text" name="usuario">
+		<div class="form-container login">
+			<form method="post" action="" autocomplete="off">
+				<div>
+					<input id="input-usuario" class="form-item required no-validate" type="text" name="usuario">
 					<label id="label-usuario" for="input-usuario">Usuário</label>
 
 					<span class="error-description"></span>
-				</div><!--div.div-item-->
+				</div>
 
-				<div class="div-item div-item-senha">
+				<div>
 					<input id="input-senha" class="form-item required no-validate password" type="password" name="senha" maxlength="12">
 					<label id="label-senha" for="input-senha">Senha</label>
 
 					<span class="error-description"></span>
 					<span class="show-password"></span>
-				</div><!--div.div-item-->
+				</div>
 
-				<div class="div-item div-item-submit">
-					<input class="input-submit button button-green" type="submit" value="Login">
-				</div><!--div.div-item-->
+				<div>
+					<input class="button button-green" type="submit" value="Login">
+				</div>
 			</form>
 		</div><!--div.form-container-->
 	</body>
